@@ -6,5 +6,5 @@ GenericName=Advanced Text Editor - Root Mode
 Comment=A GTK2/3 text editor inspired ( but not based on ) BBEdit.
 Terminal=false
 Type=Application
-Categories=System;
+Categories=GTK;System;
 MimeType=text/plain
